Minor changes (untested)