@@ -1,56 +1,93 @@
 # I used "mypasssword" as the password
 
-# TODO: change alias?
-# KEY_ALIAS=wile_e_coyote
+
+
+rm my_keystore.store
+rm my_certificate.cer
 
 # /System/Library/Frameworks/JavaVM.framework/Versions/A/Commands/keytool
-keytool -genkey -alias wile_e_coyote -keystore acme.store -keyalg RSA
-
-# this generates a file called acme.store and a signed jar file
-jarsigner -keystore acme.store -signedjar ./signed_myapp.jar commons-lang3-3.1.jar $KEY_ALIAS
-
-keytool -export -keystore acme.store -alias wile_e_coyote -file ACME.cer
-
-keytool -import -alias wile_e_coyote -file ACME.cer -keystore roadrunner.store
-
-exit
-###
-
-cat <<EOF | tee output.log
-sh -x run.sh
-+ KEY_ALIAS=wile_e_coyote
-+ keytool -genkey -alias wile_e_coyote -keystore acme.store -keyalg RSA
+keytool -genkey -alias my_key_alias -keystore my_keystore.store -keyalg RSA
+cat <<EOF
+Sridhars-MacBook-Air Fri 19 November 2021  6:55PM> keytool -genkey -alias my_key_alias -keystore my_keystore.store -keyalg RSA
 Enter keystore password:
 Re-enter new password:
 What is your first and last name?
-  [Unknown]:  sridhar sarnobat
+  [Unknown]:
 What is the name of your organizational unit?
-  [Unknown]:  iot
+  [Unknown]:
 What is the name of your organization?
-  [Unknown]:  cisco
+  [Unknown]:
 What is the name of your City or Locality?
-  [Unknown]:  san jose
+  [Unknown]:
 What is the name of your State or Province?
-  [Unknown]:  ca
+  [Unknown]:
 What is the two-letter country code for this unit?
-  [Unknown]:  us
-Is CN=sridhar sarnobat, OU=iot, O=cisco, L=san jose, ST=ca, C=us correct?
+  [Unknown]:
+Is CN=Unknown, OU=Unknown, O=Unknown, L=Unknown, ST=Unknown, C=Unknown correct?
   [no]:  yes
 
-Enter key password for <wile_e_coyote>
+Enter key password for <my_key_alias>
 	(RETURN if same as keystore password):
-Re-enter new password:
-They don't match. Try again
-Enter key password for <wile_e_coyote>
-	(RETURN if same as keystore password):
-Re-enter new password:
 
 Warning:
-The JKS keystore uses a proprietary format. It is recommended to migrate to PKCS12 which is an industry standard format using "keytool -importkeystore -srckeystore acme.store -destkeystore acme.store -deststoretype pkcs12".
-+ jarsigner -keystore acme.store -signedjar ./signed_core-prime-8.62.0-SNAPSHOT.jar /Volumes/Numerous/work/src/iot_controlcenter.git/module/CorePrime/build/libs/core-prime-8.62.0-SNAPSHOT.jar wile_e_coyote
+The JKS keystore uses a proprietary format. It is recommended to migrate to PKCS12 which is an industry standard format using "keytool -importkeystore -srckeystore my_keystore.store -destkeystore my_keystore.store -deststoretype pkcs12".
+EOF
+
+
+# this generates a file called my_keystore.store and a signed jar file
+jarsigner -keystore my_keystore.store -signedjar ./signed_myapp.jar commons-lang3-3.1.jar my_key_alias
+
+cat <<EOF
+Sridhars-MacBook-Air Fri 19 November 2021  6:56PM> jarsigner -keystore my_keystore.store -signedjar ./signed_myapp.jar commons-lang3-3.1.jar my_key_alias
 Enter Passphrase for keystore:
 jar signed.
 
 Warning:
 The signer's certificate is self-signed.
 EOF
+
+keytool -export -keystore my_keystore.store -alias my_key_alias -file my_certificate.cer
+
+cat <<EOF
+Sridhars-MacBook-Air Fri 19 November 2021  6:56PM> keytool -export -keystore my_keystore.store -alias my_key_alias -file my_certificate.cer
+Enter keystore password:
+Certificate stored in file <my_certificate.cer>
+
+Warning:
+The JKS keystore uses a proprietary format. It is recommended to migrate to PKCS12 which is an industry standard format using "keytool -importkeystore -srckeystore my_keystore.store -destkeystore my_keystore.store -deststoretype pkcs12".
+EOF
+
+keytool -import -alias my_key_alias -file my_certificate.cer -keystore my_keystore_another.store
+
+cat <<EOF
+Sridhars-MacBook-Air Fri 19 November 2021  6:56PM> keytool -import -alias my_key_alias -file my_certificate.cer -keystore my_keystore_another.store
+Enter keystore password:
+Re-enter new password:
+Owner: CN=Unknown, OU=Unknown, O=Unknown, L=Unknown, ST=Unknown, C=Unknown
+Issuer: CN=Unknown, OU=Unknown, O=Unknown, L=Unknown, ST=Unknown, C=Unknown
+Serial number: 2a530696
+Valid from: Fri Nov 19 18:56:37 PST 2021 until: Thu Feb 17 18:56:37 PST 2022
+Certificate fingerprints:
+	 SHA1: 3D:9A:7A:1A:93:DC:61:AF:62:2E:B0:29:32:37:D0:DF:E2:ED:27:0F
+	 SHA256: A7:28:80:27:F6:E2:EC:F3:9F:2E:27:19:B6:E8:6D:2F:D1:A7:30:37:BA:B5:0F:74:0A:A4:A9:9E:4F:5E:3D:54
+Signature algorithm name: SHA256withRSA
+Subject Public Key Algorithm: 2048-bit RSA key
+Version: 3
+
+Extensions:
+
+#1: ObjectId: 2.5.29.14 Criticality=false
+SubjectKeyIdentifier [
+KeyIdentifier [
+0000: 59 0B 07 D3 FB 76 B2 82   4D FC 48 D3 0F AB E4 5C  Y....v..M.H....\
+0010: 47 0F E1 A5                                        G...
+]
+]
+
+Trust this certificate? [no]:  yes
+Certificate was added to keystore
+EOF
+
+
+# I can't get this working without an executable jar
+java -Djava.security.manager -Djava.security.policy=my.policy -cp acme.jar acme.Message
